--- a/Online_shop/Procfile
+++ b/Online_shop/Procfile
@@ -1,2 +1,2 @@
-web: gunicorn --pythonpath Online_shop.wsgi
+web: gunicorn --pythonpath Online_shop Online_shop.wsgi
 release: python manage.py migrate
